--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
@@ -46,18 +46,15 @@ jobs:
         cpack -G DEB
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: YinYue-linux
         path: build/YinYue*.deb
 
     - name: Upload Release Asset
       if: github.event_name == 'release'
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
       with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./build/YinYue*.deb
-        asset_name: YinYue-linux.deb
-        asset_content_type: application/vnd.debian.binary-package 
+        files: build/YinYue*.deb
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
