--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,23 +15,43 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Cache Qt
+      id: cache-qt
+      uses: actions/cache@v4
+      with:
+        path: ${{ runner.workspace }}/Qt
+        key: ${{ runner.os }}-qt-5.15.2-${{ hashFiles('**/CMakeLists.txt') }}
+
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
       with:
-        version: '6.5.0'
+        version: '5.15.2'
         host: 'linux'
         target: 'desktop'
         arch: 'gcc_64'
         modules: 'qtmultimedia'
+        cache: true
+
+    - name: Cache CMake build
+      uses: actions/cache@v4
+      with:
+        path: build
+        key: ${{ runner.os }}-cmake-${{ hashFiles('**/CMakeLists.txt') }}
+        restore-keys: ${{ runner.os }}-cmake-
 
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential cmake ninja-build
+        sudo apt-get install -y build-essential cmake ninja-build \
+          libgl1-mesa-dev libpulse-dev libasound2-dev \
+          libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev \
+          gstreamer1.0-plugins-base gstreamer1.0-plugins-good \
+          gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly \
+          gstreamer1.0-libav
 
     - name: Configure CMake
       run: |
-        mkdir build
+        mkdir -p build
         cd build
         cmake -GNinja ..
 
