--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,7 @@ jobs:
     - name: List available Qt modules
       run: |
         python3 -m pip install aqtinstall
-        aqt list-qt linux desktop --modules 5.15.2 gcc_64
-
-    - name: Cache Qt
-      id: cache-qt
-      uses: actions/cache@v4
-      with:
-        path: ${{ runner.workspace }}/Qt
-        key: ${{ runner.os }}-qt-5.15.2-${{ hashFiles('**/CMakeLists.txt') }}
+        aqt list-qt linux desktop --modules 5.15.2 gcc_64 --arch gcc_64
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
@@ -34,15 +27,8 @@ jobs:
         host: 'linux'
         target: 'desktop'
         arch: 'gcc_64'
-        modules: 'qt3d qtcharts qtdatavis3d qtlottie qtnetworkauth qtpurchasing qtquicktimeline qtscript qtvirtualkeyboard qtwebglplugin'
+        tools: 'tools_qtcreator,qt.tools.qtcreator'
         cache: true
-
-    - name: Cache CMake build
-      uses: actions/cache@v4
-      with:
-        path: build
-        key: ${{ runner.os }}-cmake-${{ hashFiles('**/CMakeLists.txt') }}
-        restore-keys: ${{ runner.os }}-cmake-
 
     - name: Install Dependencies
       run: |
@@ -53,7 +39,7 @@ jobs:
           gstreamer1.0-plugins-base gstreamer1.0-plugins-good \
           gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly \
           gstreamer1.0-libav \
-          qtmultimedia5-dev
+          qt5-default qtmultimedia5-dev qttools5-dev-tools
 
     - name: Configure CMake
       run: |
