--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: List available Qt modules
       run: |
         python3 -m pip install aqtinstall
-        aqt list-qt linux desktop --modules 5.15.2 gcc_64 --arch gcc_64
+        aqt list-qt linux desktop --modules 5.15.2 gcc_64
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
