--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,14 @@ jobs:
     - name: Install macOS Dependencies
       if: runner.os == 'macOS'
       run: |
-        brew install cmake ninja
+        brew install cmake ninja imagemagick
+        
+        # 创建 DMG 资源目录
+        mkdir -p resources
+        
+        # 创建一个简单的背景图片（如果没有自定义背景）
+        convert -size 540x380 xc:none -draw "roundrectangle 20,20 520,360 20,20" \
+                -fill white -stroke '#666666' resources/dmg_background.png
 
     - name: Configure CMake
       shell: bash
