--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # macOS 特定设置
 if(APPLE)
+    set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
     set(CMAKE_MACOSX_BUNDLE ON)
     set(MACOSX_BUNDLE_BUNDLE_NAME "YinYue")
     set(MACOSX_BUNDLE_GUI_IDENTIFIER "com.yinyue.app")
