--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,17 +84,7 @@ jobs:
     - name: Install macOS Dependencies
       if: runner.os == 'macOS'
       run: |
-        brew install cmake ninja imagemagick p7zip pipx
-        
-        # 使用 pipx 安装 Python 包
-        pipx install py7zr==0.20.*
-        
-        # 创建 DMG 资源目录
-        mkdir -p resources
-        
-        # 创建一个简单的背景图片
-        convert -size 540x380 xc:none -draw "roundrectangle 20,20 520,360 20,20" \
-                -fill white -stroke '#666666' resources/dmg_background.png
+        brew install cmake ninja
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v3
@@ -105,8 +95,6 @@ jobs:
         arch: ${{ matrix.qt_arch }}
         cache: true
         setup-python: false
-        aqtversion: '==3.1.*'
-        py7zrversion: '==0.20.*'
         extra: '--external 7z'
 
     - name: Configure CMake (Windows)
