--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,8 @@ Thumbs.db
 # Project-specific
 *.log
 *.bak 
+
+# Allow GitHub Actions workflows
+!.github/
+!.github/workflows/
+!.github/workflows/*.yml 
