--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -11,14 +11,14 @@ jobs:
   build-linux:
     strategy:
       matrix:
-        arch: [amd64, arm64]
+        arch: [amd64]
         include:
           - arch: amd64
             qt_arch: gcc_64
             platform: x86_64-linux-gnu
-          - arch: arm64
-            qt_arch: gcc_arm64
-            platform: aarch64-linux-gnu
+        #   - arch: arm64
+        #     qt_arch: gcc_arm64
+        #     platform: aarch64-linux-gnu
     
     runs-on: ubuntu-latest
     
